--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -375,7 +375,7 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-3 offset-1 form-label">
-                                    <label class="">GST Certificate</label>
+                                    <label class="mandatory">GST Certificate</label>
                                 </div>
                                 <div class="col-7">
                                     <div class="input-group mb-3">
