--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -74,33 +74,63 @@
                 <ng-container matColumnDef="kycStatus">
                     <mat-header-cell *matHeaderCellDef>KYC Status</mat-header-cell>
                     <mat-cell *matCellDef="let lead">
-                        <span class="text-success" *ngIf="lead.kycStatus == 'approved'">
-                            {{lead.kycStatus | titlecase}} </span>
-                        <span class="text-warning" *ngIf="lead.kycStatus == 'pending'">
-                            {{lead.kycStatus | titlecase}}
-                        </span>
-                        <span class="text-danger" *ngIf="lead.kycStatus == 'rejected'">
-                            {{lead.kycStatus | titlecase}}
-                        </span>
+                        <ng-container *ngIf="lead.moduleId == 1">
+                            <span class="text-success" *ngIf="lead.kycStatus == 'approved'">
+                                {{lead.kycStatus | titlecase}} </span>
+                            <span class="text-warning" *ngIf="lead.kycStatus == 'pending'">
+                                {{lead.kycStatus | titlecase}}
+                            </span>
+                            <span class="text-danger" *ngIf="lead.kycStatus == 'rejected'">
+                                {{lead.kycStatus | titlecase}}
+                            </span>
+                        </ng-container>
+
+                        <ng-container *ngIf="lead.moduleId == 3">
+                            <span class="text-success" *ngIf="lead.scrapKycStatus == 'approved'">
+                                {{lead.scrapKycStatus | titlecase}} </span>
+                            <span class="text-warning" *ngIf="lead.scrapKycStatus == 'pending'">
+                                {{lead.scrapKycStatus | titlecase}}
+                            </span>
+                            <span class="text-danger" *ngIf="lead.scrapKycStatus == 'rejected'">
+                                {{lead.scrapKycStatus | titlecase}}
+                            </span>
+                        </ng-container>
+
                     </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="kyc">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let lead">
-                        <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc !== null">
-                            <div [ngStyle]="{'display': 'inherit'}" *ngIf="!lead.customerKyc.isKycSubmitted">
-                                <button (click)="goToKyc(lead)" class="apply-kyc"
-                                    *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
-                            </div>
-                        </ng-container>
-                        <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc == null">
-                            <div [ngStyle]="{'display': 'inherit'}">
-                                <button (click)="goToKyc(lead)" class="apply-kyc"
-                                    *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
-                            </div>
+                        <ng-container *ngIf="lead.module?.id == 1">
+                            <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc !== null">
+                                <div [ngStyle]="{'display': 'inherit'}" *ngIf="!lead.customerKyc.isKycSubmitted">
+                                    <button (click)="goToKyc(lead)" class="apply-kyc"
+                                        *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
+                                </div>
+                            </ng-container>
+                            <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc == null">
+                                <div [ngStyle]="{'display': 'inherit'}">
+                                    <button (click)="goToKyc(lead)" class="apply-kyc"
+                                        *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
+                                </div>
+                            </ng-container>
                         </ng-container>
 
+                        <ng-container *ngIf="lead.module?.id == 3">
+                            <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc !== null">
+                                <div [ngStyle]="{'display': 'inherit'}" *ngIf="!lead.customerKyc.isScrapKycSubmitted">
+                                    <button (click)="goToKyc(lead)" class="apply-kyc"
+                                        *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
+                                </div>
+                            </ng-container>
+                            <ng-container *ngIf="lead.status.id == '1' &&  lead.customerKyc == null">
+                                <div [ngStyle]="{'display': 'inherit'}">
+                                    <button (click)="goToKyc(lead)" class="apply-kyc"
+                                        *ngxPermissionsOnly="['customerKycAdd']">Apply KYC</button>
+                                </div>
+                            </ng-container>
+                        </ng-container>
                     </mat-cell>
                 </ng-container>
 
