--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -7,12 +7,12 @@
 
                 <ng-container matColumnDef="transactionId">
                     <mat-header-cell *matHeaderCellDef>Transaction ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{ item.transaction?.transactionUniqueId }}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{ item.transaction?.transactionUniqueId | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="bankTransactionId">
                     <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{ item.transaction?.bankTransactionUniqueId }}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{ item.transaction?.bankTransactionUniqueId | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="appraiserName">
@@ -147,6 +147,20 @@
 
                         <!-- <button style="width: 120px;" class="apply-kyc" (click)="updateStatus(item)">Update
                         </button> -->
+
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="uploadDocument">
+                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                    <mat-cell *matCellDef="let item">
+                        <div *ngxPermissionsOnly="['partReleaseStatus']">
+                            <div *ngIf="item.partReleaseStatus == 'released'">
+                                <button *ngIf="!item.documents" style="width: 130px;" class="apply-kyc"
+                                    (click)="updateDocument(item)">Upload
+                                    Documents
+                                </button>
+                            </div>
+                        </div>
                     </mat-cell>
                 </ng-container>
 
